# zephyr-threading-compiletime

./: CMakeLists.txt  Makefile  README.md  app.overlay  prj.conf
src/: main.c
